--- a/game/game.css
+++ b/game/game.css
@@ -63,3 +63,37 @@
 .data-header{
     font-size: 30px
 }
+.year {
+    position: absolute;
+    font-size: 30px;
+    color: red;
+    display: flex;
+    justify-content: center;
+    width: 150px;
+}
+header{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background: #023047;
+    color: white;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+}
+.icon-button{
+    background-color: #023047;
+
+        border: none; /* Remove borders */
+        color: white; /* White text */
+        padding: 12px 16px; /* Some padding */
+        font-size: 16px; /* Set a font size */
+        cursor: pointer; /* Mouse pointer on hover */
+        margin-right: 50px;
+
+
+}
+.icon-button:hover {
+    background-color: DodgerBlue; /* Blue background */
+}
+
